fixed navbar on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,19 +19,18 @@
     margin: 0;
 }
 
+.container-fluid.nav-container {
+    justify-content: center;
+}
+
 .nav-link, .nav-link:focus, .nav-link:hover {
     color: #f5f5f5;
 }
 
+
 .nav-link.active {
     border-bottom: 2px solid #FFFFFF;    
 }
-
-.scrollspy {
-    position: relative;
-    overflow-y: scroll;
-    height: calc(100% - 60px);
-} 
 
 .navbar-collapse {
     flex-grow: 0;
@@ -45,6 +44,77 @@
 #navbarSupportedContent .dropdown-toggle::after {
     display:none;
 }
+
+@media (min-width: 769px) {
+    .navbar-toggle-btn {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar-collapse > ul {
+        flex-direction: column;
+    }
+    .navbar-toggle-btn {
+        margin-left: 10px;
+        border: 1px transparent;
+        background-color: transparent;
+    }
+    
+    .navbar-toggle-btn.collapsed > .navbar-toggle-icon {
+        display: inline-block;
+        width: 1.5em;
+        height: 1.5em;
+        vertical-align: middle;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.95%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='3' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+    }
+
+    .navbar-toggle-icon {
+        display: inline-block;
+        width: 1.5em;
+        height: 1.5em;
+        vertical-align: middle;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' class='bi bi-x' viewBox='2 2 12 12'%3e%3cpath stroke='rgba%28255, 255, 255, 0.95%29' stroke-linecap='round' stroke-width='1' d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+    }
+    
+    
+    .nav-link.active > span {
+        border-bottom: 2px solid #FFFFFF;
+        padding-bottom: 5px;
+    }
+
+    .nav-link.active {
+        border-bottom: 0px solid;    
+    }
+
+    .nav-container {
+        justify-content: center;
+    }
+
+    .container-fluid.nav-container {
+        justify-content: flex-start;
+    }
+    
+    .navbar-brand.navbar-title {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%,-50%);
+
+    }
+}
+
+
+.scrollspy {
+    position: relative;
+    overflow-y: scroll;
+    height: calc(100% - 60px);
+} 
 
 .sub-heading {
     color: #011F5B;
